--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   },
