--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-rte": "^0.11.0",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   },
